# tree-sitter-kurai

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example_file.kurai  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kurai.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kurai/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKurai/: kurai.h
bindings/swift/TreeSitterKuraiTests/: TreeSitterKuraiTests.swift
src/: grammar.json  node-types.json  parser.c
