[package]
name = "tree-sitter-kurai"
description = "Just code in this easy ahh language named Kurai"
version = "0.3.0"
authors = ["Zairy Putra <zairysbigtae@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kurai"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zairysbigtae/kurai"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
